melhorias visuais e ferramentas

--- a/src/app/components/test-api/test-api.component.html
+++ b/src/app/components/test-api/test-api.component.html
@@ -14,7 +14,7 @@
     
     <div *ngIf="loading">
         <div id="message-sucess" class="alert alert-success" role="alert">
-           Alunos Atualiazados com sucesso!
+           Alunos Atualiazados com sucesso
         </div>
     </div>
 
