--- a/src/app/components/test-api/test-api.component.css
+++ b/src/app/components/test-api/test-api.component.css
@@ -1,48 +1,89 @@
 .dados{
     border-radius: 2.5px;
-    margin: 80px 0 0 20px;
-    width: 97%;
-    height:  100%;
-    padding: 150px;
+    margin: 40px 0 0 10%;
+    width: 80%;
+    padding: 80px;
     background-color: whitesmoke;
-    border: 1px solid #ccc;
+    border: 2px solid #152359;
+    border-radius: 20px;
+}
+
+.flex{
+   display: flex;
+   position: relative;
+   left: 15%;
 }
 
 #cadastrar{
-   margin:-5% 0 0 17% ;
+   position: relative;
+   top: -10px;
+   left: 10%;
    padding: 5%;
-   border-radius: 10%;
-   font-size: 20px;
-
+   width: 20%;
+   height: 10%;
+   font-size: 100px;
+   cursor: pointer;
 }
  
 #consultar{
-    margin:-5% 0 0 10% ;
-    padding: 5%;
-    border-radius: 10%;
-    font-size: 20px;
- 
+   position: relative;
+   top: -10px;
+   left: 20%;
+   padding: 5%;
+   width: 20%;
+   height: 10%;
+   font-size: 110px;
+   cursor: pointer;
  }
 
- #deletar{
-   margin:5% 0 0 17% ;
-   padding: 5%;
-   width: 25%;
-   border-radius: 10%;
-   font-size: 20px;
-
-}
-
  .title-progress{
-    margin: 6% 0 0 36%;
+    margin: -2% 0 0 38%;
  }
 
  .progress{
-    margin: 20px 0 0 36%;
-    max-width: 20%;
+    margin: 20px 0 0 38%;
+    max-width: 22%;
  }
 
  #message-sucess{
-   margin: 10% 0 -10% 15%;
+   margin: -10px 0 -10px 22%;
    max-width: 60%;
+   font-weight: bold;
+ }
+
+ .mdl-img{
+   width: 10%;
+   position: relative;
+   top:0;
+   left: 36%;
+ }
+
+ .relationship{
+   width: 7%;
+   position: relative;
+   top:0;
+   left: 36%;
+ }
+ 
+ .rm-img{
+   width: 12%;
+   position: relative;
+   top:0;
+   left: 36%;
+ }
+
+ .descrition1{
+   position: relative;
+   top:-60px;
+   left: 28%;
+   max-width: 28%;
+   font-weight: bold;
+ }
+
+ .descrition2{
+   position: relative;
+   top:-97px;
+   left: 59%;
+   max-width: 60%;
+   font-weight: bold;
  }
