--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+body,html{
+    background: linear-gradient(#a7c3d9 ,#124c74);
+    width: 100%;
+    height: 100%;
+}
