--- a/src/app/components/consultar-alunos/consultar-alunos.component.html
+++ b/src/app/components/consultar-alunos/consultar-alunos.component.html
@@ -3,7 +3,7 @@
 <img class="relationship" src="../../../assets/img/relationship.png">
 <img class="rm-img" src="../../../assets/img/rm.png">
 
-<mat-icon routerLink ='/alunos' class="backpage">keyboard_backspace</mat-icon>
+<mat-icon routerLink ='/' class="backpage">keyboard_backspace</mat-icon>
 
 <div class="loading" *ngIf="!loading">  
     <h4 id="title-progress" class="fixed-top">Carregando Alunos</h4>
