--- a/src/app/components/test-api/test-api.component.html
+++ b/src/app/components/test-api/test-api.component.html
@@ -6,6 +6,13 @@
 <section  class="dados">
    
     <div class="flex">
+        <mat-icon id="cadastrarcurso" (click)="cadastrarCurso()">note_add</mat-icon>
+        
+    </div>
+    
+    <p class="descrition3">Cadastrar Cursos</p>
+
+    <div class="flex">
         <mat-icon id="cadastrar" (click)="cadastrarUsuarios()">group_add</mat-icon>
         <mat-icon id="consultar" routerLink ='/alunos/consultar-aluno'>supervisor_account</mat-icon>
     </div>
@@ -13,23 +20,45 @@
     <p class="descrition1">Cadastrar alunos</p>
     <p class="descrition2">Consultar alunos</p>
 
+
     <div *ngIf="!loading && cadastrar">
     <h4 class="title-progress">Carregando Alunos</h4>
          <mat-progress-bar class="progress" *ngIf="!loading && cadastrar" mode="indeterminate"></mat-progress-bar>
     </div>
+
+    <div *ngIf="!loading2 && cadastrar2">
+        <h4 class="title-progress">Carregando Alunos</h4>
+             <mat-progress-bar class="progress" *ngIf="!loading2 && cadastrar2" mode="indeterminate"></mat-progress-bar>
+        </div>
     
     <div *ngIf="loading">
         <div id="message-sucess" class="alert alert-success" role="alert">
            Alunos Atualiazados com sucesso!
         </div>
     </div>
-    
-    <button id="showerrors" *ngIf="response != null" (click)="errors()" type="button" class="btn btn-primary">Exibir Logs <div class="count"><span>{{countresponse}}</span></div></button>
-    
-    <div *ngIf="showerrors" id="alerterrors" class="alert lert-primary" role="alert">
-        <div *ngFor="let error of response">
-            <p>{{error}}</p>
+
+    <div *ngIf="loading2">
+        <div id="message-sucess" class="alert alert-success" role="alert">
+           Cursos Atualiazados com sucesso!
         </div>
+    </div>
+    
+    
+    <button id="showlogs" *ngIf="responsealunos != null" (click)="logs()" type="button" class="btn btn-primary">Exibir Logs <div class="count"><span>{{countresponse}}</span></div></button>
+    
+    <div *ngIf="showelogs" id="alertlogs" class="alert lert-primary" role="alert">
+        <div *ngFor="let logs of responsealunos">
+            <p>{{logs}}</p>
+        </div>
+    </div>
+
+    <button id="showlogs2" *ngIf="responsecursos != null" (click)="logs2()" type="button" class="btn btn-primary">Exibir Logs <div class="count"><span>{{countresponse2}}</span></div></button>
+    
+    <div *ngIf="showelogs2" id="alertlogs" class="alert lert-primary" role="alert">
+        <div *ngFor="let logs2 of responsecursos">
+            <p>{{logs2}}</p>
+        </div>
+ 
     </div>
    
     
