--- a/src/app/components/digital/consultar-aluno-digital/consultar-aluno-digital.component.html
+++ b/src/app/components/digital/consultar-aluno-digital/consultar-aluno-digital.component.html
@@ -2,8 +2,9 @@
 <img class="mdl-img" src="../../../assets/img/mdl.png">
 <img class="relationship" src="../../../assets/img/relationship.png">
 <img class="rm-img" src="../../../assets/img/rm.png">
+<p class="title">Digital</p>
 
-<mat-icon routerLink ='/digital' class="backpage">keyboard_backspace</mat-icon>
+<mat-icon routerLink ='/ava' class="backpage">keyboard_backspace</mat-icon>
 
 <div class="loading" *ngIf="!loading">  
     <h4 id="title-progress" class="fixed-top">Carregando Alunos</h4>
@@ -17,6 +18,7 @@
             <thead>
             <tr>
                 <th scope="col">ID</th>
+                <th scope="col">USERNAME</th>
                 <th scope="col">NOME</th>
                 <th scope="col">SOBRENOME</th>
                 <th scope="col">EMAIL</th>
@@ -25,10 +27,11 @@
             <tbody>
             <tr>
                 <th>{{dados.id}}</th>
+                <td>{{dados.username}}</td>
                 <td>{{dados.firstname}}</td>
                 <td>{{dados.lastname}}</td>
                 <td>{{dados.email}}</td>
-                <!-- <mat-icon (click)="deletarAluno(dados.id)" class="delete">delete</mat-icon> -->
+             
             </tr>
          
             </tbody> 
