--- a/src/app/components/digital/functions/functions.component.html
+++ b/src/app/components/digital/functions/functions.component.html
@@ -28,7 +28,7 @@
     </div>
 
     <div *ngIf="!loading2 && cadastrar2">
-        <h4 class="title-progress">Carregando Alunos</h4>
+        <h4 class="title-progress">Carregando Cursos</h4>
              <mat-progress-bar class="progress" *ngIf="!loading2 && cadastrar2" mode="indeterminate"></mat-progress-bar>
         </div>
     
