--- a/src/app/components/digital/consultar-aluno-digital/consultar-aluno-digital.component.css
+++ b/src/app/components/digital/consultar-aluno-digital/consultar-aluno-digital.component.css
@@ -8,6 +8,16 @@
     border: 1px solid #ccc;
 }
 
+.title{
+   position: relative;
+   top: -50px;
+   left: 38%;
+   max-width: 42%;
+   font-size: 27px;
+   font-family: 'Courier New', Courier, monospace;
+   font-weight: bold;
+   color: #343434;
+ }
 
 .loading{
     position: fixed;
@@ -29,7 +39,7 @@
 
 .backpage{
    float: left;
-   margin:20px 0 0 40px;
+   margin:50px 0 0 40px;
    cursor: pointer;
    
 }
